# EpollFrame

./: .gitignore  CMakeLists.txt  Client.cpp  EpollManager.cpp  EpollManager.h  Network.h  README.md  Server.cpp  Server.h  client  comm.cpp  comm.h  comm_epoll.cpp  comm_epoll.h  epoll_framework.sln  epoll_framework.vcxproj  epoll_http.cpp  global.h  globals.h  main.cpp  main_epoll.cpp  test_main.cpp  welcome.html
epoll_demo/: epoll_http.c  http_server
src/: Archieve.cpp  Makefile  epollhttp  globals.h  main_epoll.c
